Fix: remove scrollbar x-axis

--- a/style.css
+++ b/style.css
@@ -1134,7 +1134,7 @@
   }
 
   .card-works-container {
-    width: 100vw;
+    width: auto;
     height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
